ch-add-01/ngx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ngx-svc-add01
  
spec:
  selector:
    app: ngx-dep-add01
    
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: NodePort
